<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_resolution">
    <fragment
        android:id="@id/nav_resolution"
        android:name="top.jiecs.screener.ui.resolution.ResolutionFragment"
        android:label="@string/resolution"
        tools:layout="@layout/dialog_resolution_content">
        <action
            android:id="@+id/action_nav_resolution_to_nav_resolution_confirmation"
            app:destination="@id/nav_resolution_confirmation" />
        <action
            android:id="@+id/action_nav_resolution_to_nav_resolution_dialog"
            app:destination="@id/nav_resolution_dialog" />
    </fragment>

    <dialog
        android:id="@+id/nav_resolution_dialog"
        android:name="top.jiecs.screener.ui.resolution.ResolutionDialogFragment"
        android:label="@string/resolution" />

    <dialog
        android:id="@+id/nav_resolution_confirmation"
        android:name="top.jiecs.screener.ui.resolution.ConfirmationDialogFragment"
        android:label="@string/confirmation_dialog" />

    <fragment
        android:id="@id/nav_frame_rate"
        android:name="top.jiecs.screener.ui.framerate.FrameRateFragment"
        android:label="@string/frame_rate"
        tools:layout="@layout/fragment_frame_rate" />

    <fragment
        android:id="@id/nav_settings"
        android:name="top.jiecs.screener.ui.settings.SettingsFragment"
        android:label="@string/settings">
        <action
            android:id="@+id/action_nav_settings_to_nav_display_modes"
            app:destination="@id/nav_display_modes" />
    </fragment>

    <fragment
        android:id="@+id/nav_display_modes"
        android:name="top.jiecs.screener.ui.displaymode.DisplayModeFragment"
        android:label="@string/display_modes"
        tools:layout="@layout/fragment_display_mode" />
</navigation>