<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/display_mode_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="3200x1440 @ 520dpi" />

    <Button
        android:id="@+id/apply_button"
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        app:icon="@drawable/baseline_done_all_24"
        android:tooltipText="@string/apply"
        android:contentDescription="@string/apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/display_mode_text"
        app:layout_constraintEnd_toStartOf="@id/edit_button"
        app:layout_constraintTop_toTopOf="@id/display_mode_text" />

    <Button
        android:id="@+id/edit_button"
        style="@style/Widget.Material3.Button.IconButton"
        app:icon="@drawable/outline_edit_24"
        android:tooltipText="@string/edit"
        android:contentDescription="@string/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/display_mode_text"
        app:layout_constraintEnd_toStartOf="@id/remove_button"
        app:layout_constraintTop_toTopOf="@id/display_mode_text" />

    <Button
        android:id="@+id/remove_button"
        style="@style/Widget.Material3.Button.IconButton"
        app:icon="@drawable/baseline_remove_24"
        android:tooltipText="@string/remove"
        android:contentDescription="@string/remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/display_mode_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/display_mode_text" />

</androidx.constraintlayout.widget.ConstraintLayout>