<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/resolution_editor_layout">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:hint="@string/height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="@id/resolution_editor_layout"
        android:id="@+id/text_height">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:hint="@string/width"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/text_height"
        android:id="@+id/text_width">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:hint="@string/dpi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/text_width"
        android:id="@+id/text_dpi">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/chip_group"
        app:layout_constraintTop_toBottomOf="@+id/text_dpi"
        android:id="@+id/text_scale"
        android:text="@string/scale" />

    <com.google.android.material.slider.Slider
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="@+id/text_scale"
        app:layout_constraintStart_toEndOf="@+id/text_scale"
        app:layout_constraintEnd_toEndOf="parent"
        android:value="0"
        android:valueFrom="-50"
        android:valueTo="50"
        app:layout_constraintBottom_toBottomOf="@+id/text_scale"
        android:layout_marginTop="8dp"
        android:stepSize="5"
        android:id="@+id/slider_scale" />

    <com.google.android.material.chip.ChipGroup
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/slider_scale"
        app:singleSelection="true"
        app:selectionRequired="true"
        android:id="@+id/chip_group" />

</androidx.constraintlayout.widget.ConstraintLayout>